# devstack-tools

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  test-requirements.txt  tox.ini
devstack/: __init__.py  cmd.py  dsconf.py
devstack/tests/: test_devstack.py  test_ini_add.py  test_ini_comment.py  test_ini_remove.py  test_ini_set.py  test_ini_uncomment.py  test_localconf_extract.py  test_localconf_merge.py  test_localconf_set.py  test_localconf_set_local.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
releasenotes/notes/: Drop-py3.6-and-py3.7-from-devstack-tools-92af6155b0dc3314.yaml  drop-py-2-7-0b6b170cacac80e0.yaml
releasenotes/source/: conf.py  index.rst
